src/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenshoku
  labels:
    name: tenshoku
